--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Srihari V | AI/ML Engineer & Full-Stack Developer</title>
+    <title>Srihari V's Portfolio | AI/ML Engineer & Full-Stack Developer</title>
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Configure Tailwind theme, using Inter font and custom colors -->
@@ -149,7 +149,8 @@
                         </li>
                         <li>
                             <p class="font-medium text-gray-900">LinkedIn:</p>
-                            <a href="https://linkedin/Srihari/" target="_blank" class="text-primary hover:underline">linkedin/Srihari/</a>
+                            <!-- UPDATED LINK HERE -->
+                            <a href="https://www.linkedin.com/in/srihari-v-592801252/" target="_blank" class="text-primary hover:underline">linkedin/srihari-v-592801252/</a>
                         </li>
                         <li>
                             <p class="font-medium text-gray-900">GitHub:</p>
@@ -280,7 +281,8 @@
                     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-17 4v7a2 2 0 002 2h12a2 2 0 002-2v-7"></path></svg>
                     <span>Email Me: stiharivenkat@gmail.com</span>
                 </a>
-                <a href="https://linkedin/Srihari/" target="_blank" class="flex items-center space-x-3 p-4 border border-gray-300 text-gray-700 font-semibold rounded-xl hover:bg-gray-100 transition duration-300">
+                <!-- UPDATED LINK HERE -->
+                <a href="https://www.linkedin.com/in/srihari-v-592801252/" target="_blank" class="flex items-center space-x-3 p-4 border border-gray-300 text-gray-700 font-semibold rounded-xl hover:bg-gray-100 transition duration-300">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.529-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"></path></svg>
                     <span>Connect on LinkedIn</span>
                 </a>
