--- a/index.html
+++ b/index.html
@@ -101,10 +101,11 @@
                 <p class="mt-6 text-xl text-gray-600 max-w-lg">
                     A B.Tech Innovator specializing in AI/ML, NLP, and Full-Stack Development. I build intelligent, data-driven applications using BERT, Streamlit, FastAPI, and the Gemini API.
                 </p>
+                <!-- START: Removed 'Get In Touch' button as requested -->
                 <div class="mt-10 flex space-x-4">
                     <a href="#projects" class="px-8 py-3 bg-primary text-white font-semibold rounded-xl shadow-lg hover:bg-indigo-700 transition duration-300 transform hover:scale-105">View Projects</a>
-                    <a href="mailto:stiharivenkat@gmail.com" class="px-8 py-3 border border-gray-300 text-gray-700 font-semibold rounded-xl hover:bg-gray-100 transition duration-300 transform hover:scale-105">Get In Touch</a>
                 </div>
+                <!-- END: Removed 'Get In Touch' button -->
             </div>
             <!-- Profile Placeholder (Avatar style) -->
             <div class="md:w-1/4 w-full flex justify-center">
@@ -149,7 +150,7 @@
                         </li>
                         <li>
                             <p class="font-medium text-gray-900">LinkedIn:</p>
-                            <!-- UPDATED LINK HERE -->
+                            <!-- CORRECTED LINK -->
                             <a href="https://www.linkedin.com/in/srihari-v-592801252/" target="_blank" class="text-primary hover:underline">linkedin/srihari-v-592801252/</a>
                         </li>
                         <li>
@@ -274,19 +275,26 @@
         <section id="contact" class="py-16 bg-white rounded-3xl shadow-xl px-8 sm:px-12">
             <h2 class="text-3xl font-bold text-gray-900 mb-8 section-title">Let's Connect</h2>
             <p class="text-xl text-gray-600 mb-10">
-                I'm actively seeking roles and collaborations where I can apply my skills in AI/ML and application development. Feel free to reach out to discuss potential opportunities!
+                I'm actively seeking roles and collaborations where I can apply my skills in AI/ML and application development. Feel free to reach out!
             </p>
-            <div class="flex flex-col sm:flex-row space-y-6 sm:space-y-0 sm:space-x-8">
-                <a href="mailto:stiharivenkat@gmail.com" class="flex items-center space-x-3 p-4 bg-primary text-white font-semibold rounded-xl shadow-lg hover:bg-indigo-700 transition duration-300">
-                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-17 4v7a2 2 0 002 2h12a2 2 0 002-2v-7"></path></svg>
-                    <span>Email Me: stiharivenkat@gmail.com</span>
-                </a>
-                <!-- UPDATED LINK HERE -->
-                <a href="https://www.linkedin.com/in/srihari-v-592801252/" target="_blank" class="flex items-center space-x-3 p-4 border border-gray-300 text-gray-700 font-semibold rounded-xl hover:bg-gray-100 transition duration-300">
+            <!-- START: Changed Email to a text block and updated LinkedIn button styling -->
+            <div class="flex flex-col sm:flex-row space-y-6 sm:space-y-0 sm:space-x-8 items-start sm:items-center">
+                <!-- Email Text Block (Replaced Button) -->
+                <div class="p-4 rounded-xl bg-gray-50 border border-gray-200 w-full sm:w-auto">
+                    <p class="text-sm font-semibold text-gray-600 mb-1">Direct Email</p>
+                    <a href="mailto:stiharivenkat@gmail.com" class="flex items-center space-x-2 text-lg text-primary hover:text-indigo-700 font-medium transition duration-300">
+                        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-17 4v7a2 2 0 002 2h12a2 2 0 002-2v-7"></path></svg>
+                        <span>stiharivenkat@gmail.com</span>
+                    </a>
+                </div>
+
+                <!-- LinkedIn Button (Kept) -->
+                <a href="https://www.linkedin.com/in/srihari-v-592801252/" target="_blank" class="flex items-center space-x-3 px-8 py-4 bg-secondary text-white font-semibold rounded-xl shadow-lg hover:bg-emerald-600 transition duration-300 transform hover:scale-105">
                     <svg class="w-6 h-6" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.529-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"></path></svg>
                     <span>Connect on LinkedIn</span>
                 </a>
             </div>
+            <!-- END: Contact section changes -->
         </section>
 
     </main>
