--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                         </li>
                         <li>
                             <p class="font-medium text-gray-900">GitHub:</p>
-                            <a href="https://github/Srihari/" target="_blank" class="text-primary hover:underline">github/Srihari/</a>
+                            <!-- UPDATED GITHUB LINK -->
+                            <a href="https://github.com/Wave-Shot" target="_blank" class="text-primary hover:underline">github/Wave-Shot</a>
                         </li>
                     </ul>
                 </div>
